# PrepOS-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_foundation.py  002_exam_domain.py  003_student_onboarding.py  004_learning_graph.py  005_learning_graph_hardening.py  006_confidence_nullable.py  007_retention_state_foundation.py  008_twin_recommendations.py  009_revision_queue_projection.py  010_twin_projection_snapshot.py  011_twin_core_projection.py  012_twin_incremental_projection.py  013_readiness_impact_projection.py  014_study_plan_projection.py  015_study_plan_execution_tracking.py  016_goal_engine.py  017_twin_decision_engine.py  018_twin_interventions.py  019_intervention_outcomes.py  020_behavior_profile.py  021_personalization_projection.py  023_mentor_projection.py  024_mentor_action_center.py  025_mentor_case_management.py  026_mentor_effectiveness_learning.py  027_copilot_analytics.py  028_knowledge_foundation.py  029_copilot_content_analytics.py  030_current_affairs_metadata.py  031_current_affairs_analytics.py  032_pyq_intelligence.py  033_pyq_analytics.py  034_rag_quality.py  035_recommendation_analytics.py  036_recommendation_outcomes.py  037_coaching_memory.py  038_adaptive_study_plans.py  039_goal_forecasting.py  040_mentor_interventions.py  041_cohort_intelligence.py  (+12 more)
backend/docker/: Dockerfile
backend/scripts/: demo_seed_support.py  dev-api.sh  ensure_pgvector.py  generate_upsc_seed.py  i12_e2e_validation.py  migrate-db.sh  run_agent_benchmarks.py  s0_s1_smoke_test.py  s2_smoke_test.py  seed_demo_data.py
backend/src/prepos/: __init__.py
backend/tests/: conftest.py
backend/tests/contract/: test_copilot_analytics_openapi_contract.py  test_copilot_openapi_contract.py  test_exam_openapi_contract.py  test_learning_graph_openapi_contract.py  test_openapi_contract.py  test_rag_quality_openapi_contract.py  test_student_openapi_contract.py  test_twin_openapi_contract.py
backend/tests/helpers/: copilot_service_factory.py
backend/tests/integration/: test_agent_copilot_flow.py  test_agent_persona_flows.py  test_auth_flow.py  test_cohort_api.py  test_cohort_copilot_flow.py  test_copilot_api.py  test_copilot_recommendation_flow.py  test_effectiveness_api.py  test_exam_catalog_flow.py  test_forecasting_api.py  test_forecasting_copilot_flow.py  (+38 more)
(+995 files in other folders)
